force-app/main/default/objects/Person_Account_Relationship__c/Person_Account_Relationship__c.object-meta.xml
<CustomObject>
    <label>Person Account Relationship</label>
    <nameField>
        <displayFormat>PAR - {000000}</displayFormat>
        <label>Person Account Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>