force-app/main/default/objects/Person_Account_Relationship__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <formula>Person_Account_2__r.PersonContact.Birthdate</formula>
    <label>Birthday</label>
    <type>Date</type>
</CustomField>