force-app/main/default/objects/Person_Account_Relationship__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Person_Account_2__r.PersonContact.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>