force-app/main/default/objects/Person_Account_Relationship__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <formula>TEXT(Person_Account_2__r.PersonContact.GenderIdentity)</formula>
    <label>Gender</label>
    <type>Text</type>
</CustomField>