force-app/main/default/objects/Person_Account_Relationship__c/fields/Person_Account_2__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Person Account Relationship (Person Account 2)</relationshipLabel>
    <relationshipName>Person_Account_Relationship1</relationshipName>
    <type>Lookup</type>
</CustomField>